--- a/WebProject.html
+++ b/WebProject.html
@@ -55,7 +55,7 @@
 			<br><i>Defensive</i> mode is when you hold your ground by positioning your card sideways. If your card is ever defeated in this position, you will not lose health points. If it's a successful hold, the enemy loses health points from what is deducted between your card's defense against your opponent's offense.
 			</div></td></tr>
 			<tr><td><u>Spell Card :</u></td><td>&emsp; <u>Description :</u></td></tr>
-			<tr><td><img src="Spell Card.png" alt="Image failed to load" width="164" height="242"></td>
+			<tr><td><img src="Card Spell.png" alt="Image failed to load" width="164" height="242"></td>
 			<td><div>&emsp; <i>Unlike the Warrior Card</i> the <i>Spell Card</i> is used in many varaious occasions such as buffing your warrior(s), debuffing the enemy, be a form of transportation, act as a form of crowd control, and much more. 
 			</div></td></tr>
 			</table>
