--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -37,6 +37,7 @@
     <section id="Bass">
     <dl>
 	    <dt><b><u>Bass Corvana: Colossal Warrior</b></u></dt>
+	<dd>Filler </dd>
     </dl>
 	    <hr>
     <section id="Cherie">
