--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -13,30 +13,30 @@
     <nav>
     <table>
 	    <tr><th><b>Table of Contents:</b></th></tr>
-	    <tr><td><a href="#Bass">Bass Corvana: Colossal Warrior</a></td></tr>
-	    <tr><td><a href="#Cherie">Cherie Lutetia: Steampunk Alchemist</a></td></tr>
-	    <tr><td><a href="#Daedalus">Daedalus Hydreius: Cyber Scientist</a></td></tr>
-	    <tr><td><a href="#Darrian">Darrian O' Conway: Cyborg Musician</a></td></tr>
-            <tr><td><a href="#Derek">Derek Madison: Captain Lucksman</a></td></tr>
-	    <tr><td><a href="#Emily">Emily Ludwig: Elemental Witch</a></td></tr>
-	    <tr><td><a href="#Kurage">Kurage Kurosaki: Ninja Gorgon</a></td></tr>
-	    <tr><td><a href="#Megan">Megan Paige: Siren of Fate</a></td></tr>
-	    <tr><td><a href="Mitch">Mitch Boson: Brawn Ape</a></td></tr>
-	    <tr><td><a href="Mony">Mony Alison Wiscoff: Teenage Robot</a></td></tr>
-	    <tr><td><a href="Oliver">Oliver Boson: Monkey</a></td></tr>
-	    <tr><td><a href="Pierce">Pierce Spielberg: Dinosaur Man</a></td></tr>
-	    <tr><td><a href="Saki">Saki Kurosaki: Woodsman Sniper</a></td></tr>
-	    <tr><td><a href="Silvia">Silvia Victoria: Wolfgirl of Alfheim</a></td></tr>
-	    <tr><td><a href="Sophie">Sophie Antiqua: French Expirement</a></td></tr>
-	    <tr><td><a href="Stitch">Stitch Boson: Brain Ape</a></td></tr>
-	    <tr><td><a href="Valencia">Valencia Fernando: Bloodsmith</a></td></tr>
-	    <tr><td><a href="Vizer">Vizer Octovania: Revenant Entertainer</a></td></tr>
+	    <tr><td><a href="#Bass">Bass Corvana</a></td></tr>
+	    <tr><td><a href="#Cherie">Cherie Lutetia</a></td></tr>
+	    <tr><td><a href="#Daedalus">Daedalus Hydreius</a></td></tr>
+	    <tr><td><a href="#Darrian">Darrian O' Conway</a></td></tr>
+            <tr><td><a href="#Derek">Derek Madison</a></td></tr>
+	    <tr><td><a href="#Emily">Emily Ludwig</a></td></tr>
+	    <tr><td><a href="#Kurage">Kurage Kurosaki</a></td></tr>
+	    <tr><td><a href="#Megan">Megan Paige</a></td></tr>
+	    <tr><td><a href="Mitch">Mitch Boson</a></td></tr>
+	    <tr><td><a href="Mony">Mony Alison Wiscoff</a></td></tr>
+	    <tr><td><a href="Oliver">Oliver Boson</a></td></tr>
+	    <tr><td><a href="Pierce">Pierce Spielberg</a></td></tr>
+	    <tr><td><a href="Saki">Saki Kurosaki</a></td></tr>
+	    <tr><td><a href="Silvia">Silvia Victoria</a></td></tr>
+	    <tr><td><a href="Sophie">Sophie Antiqua</a></td></tr>
+	    <tr><td><a href="Stitch">Stitch Boson</a></td></tr>
+	    <tr><td><a href="Valencia">Valencia Fernando</a></td></tr>
+	    <tr><td><a href="Vizer">Vizer Octovania</a></td></tr>
     </table>
     </nav>
     </figure>
     <section id="Bass">
     <dl>
-	    <dt><b><u>Bass Corvana: Colossal Warrior</b></u></dt>
+	    <dt><b>Bass Corvana: Colossal Warrior</b></dt>
 	<dd>Filler </dd>
     </dl>
 	    <hr>
