--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -21,16 +21,16 @@
 	    <tr><td><a href="#Emily">Emily Ludwig</a></td></tr>
 	    <tr><td><a href="#Kurage">Kurage Kurosaki</a></td></tr>
 	    <tr><td><a href="#Megan">Megan Paige</a></td></tr>
-	    <tr><td><a href="Mitch">Mitch Boson</a></td></tr>
-	    <tr><td><a href="Mony">Mony Alison Wiscoff</a></td></tr>
-	    <tr><td><a href="Oliver">Oliver Boson</a></td></tr>
-	    <tr><td><a href="Pierce">Pierce Spielberg</a></td></tr>
-	    <tr><td><a href="Saki">Saki Kurosaki</a></td></tr>
-	    <tr><td><a href="Silvia">Silvia Victoria</a></td></tr>
-	    <tr><td><a href="Sophie">Sophie Antiqua</a></td></tr>
-	    <tr><td><a href="Stitch">Stitch Boson</a></td></tr>
-	    <tr><td><a href="Valencia">Valencia Fernando</a></td></tr>
-	    <tr><td><a href="Vizer">Vizer Octovania</a></td></tr>
+	    <tr><td><a href="#Mitch">Mitch Boson</a></td></tr>
+	    <tr><td><a href="#Mony">Mony Alison Wiscoff</a></td></tr>
+	    <tr><td><a href="#Oliver">Oliver Boson</a></td></tr>
+	    <tr><td><a href="#Pierce">Pierce Spielberg</a></td></tr>
+	    <tr><td><a href="#Saki">Saki Kurosaki</a></td></tr>
+	    <tr><td><a href="#Silvia">Silvia Victoria</a></td></tr>
+	    <tr><td><a href="#Sophie">Sophie Antiqua</a></td></tr>
+	    <tr><td><a href="#Stitch">Stitch Boson</a></td></tr>
+	    <tr><td><a href="#Valencia">Valencia Fernando</a></td></tr>
+	    <tr><td><a href="#Vizer">Vizer Octovania</a></td></tr>
     </table>
     </nav>
     </figure>
