--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Reading</title>
+    <title>Ethel Players Info</title>
     <meta charset="UTF-8">
         	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="ProjectStyle.css">
 </head>
 <body>
-    <h1>Reading Log and Summary:</h1>
+    <h1>Ethel Wiki: Player</h1>
     <hr>
     <figure>
     <nav>
