--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -37,7 +37,7 @@
     <section id="Bass">
     <dl>
 	    <dt><b>Bass Corvana: Colossal Warrior</b></dt>
-	<dd>Background: Bass was a child sold on the Chinese Market by a rich, sterile US family that adopted him because he was a rarity. 
+	    <dd><b>Background:</b> Bass was a child sold on the Chinese Market by a rich, sterile US family that adopted him because he was a rarity. 
 	He was seen more as a trophy than their child, so once old enough he stole his father's boat and set sail lost at sea in the Eastern Hemisphere.
     	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.</dd>
 	<img src="Bass Childhood.png" alt="Image failed to load" width="575" height="385">
