--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -39,10 +39,20 @@
 	    <dt><b>Bass Corvana: Colossal Warrior</b></dt>
 	    <dd><b>Background:</b> Bass was a child sold on the Chinese Market by a rich, sterile US family that adopted him because he was a rarity. 
 	He was seen more as a trophy than their child, so once old enough he stole his father's boat and set sail lost at sea in the Eastern Hemisphere.
-    	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.</dd>
-	<img src="Bass Childhood.png" alt="Image failed to load" width="575" height="385">
-	
-
+    	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.
+	    <img src="Bass Childhood.png" alt="Image failed to load" width="192" height="128"></dd>
+	<dd>
+	Bass' father liked to take him in boat trips and teach him how to fish, so he knows how to pilot a boat.	
+	He liked his parents, but they don't really like him or so to speak. 
+	As mentioned before, he felt like a trophy or a decorative doll rather than a son. 
+	They want to mold his character the way they want their son to be. 
+	They wanted him to become a lawyer (which is why he was able to debunk Vizer's claim in old skit), giving him solid comprehensive reading. 
+	They even want him to be a musician (he plays Brass instruments). 
+	There really wasn't many freedom for him in the household. However, the few things he did enjoy there was that his dad taught him on how to wrestle and box. 
+	He taught him how to fish, read a map, and drive a boat. He loves those things.
+	They let him read/watch eastern martial arts novels/videos which he became a fan of.
+	&esmp; </dd>
+	<br>Testing<br>
     </dl>
 	    <hr>
     <section id="Cherie">
