--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -39,8 +39,8 @@
 	    <dt><b>Bass Corvana: Colossal Warrior</b></dt>
 	    <dd><b>Background:</b> Bass was a child sold on the Chinese Market by a rich, sterile US family that adopted him because he was a rarity. 
 	He was seen more as a trophy than their child, so once old enough he stole his father's boat and set sail lost at sea in the Eastern Hemisphere.
-    	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.
-	    <img src="Bass Childhood.png" alt="Image failed to load" width="192" height="128"></dd>
+    	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.</dd>
+	    <img src="Bass Childhood.png" alt="Image failed to load" width="192" height="128">
 	<dd>
 	Bass' father liked to take him in boat trips and teach him how to fish, so he knows how to pilot a boat.	
 	He liked his parents, but they don't really like him or so to speak. 
@@ -51,8 +51,8 @@
 	There really wasn't many freedom for him in the household. However, the few things he did enjoy there was that his dad taught him on how to wrestle and box. 
 	He taught him how to fish, read a map, and drive a boat. He loves those things.
 	They let him read/watch eastern martial arts novels/videos which he became a fan of.
-	&esmp; </dd>
-	<br>Testing<br>
+	</dd>
+	
     </dl>
 	    <hr>
     <section id="Cherie">
