--- a/Background-Protagonists-Ethel.html
+++ b/Background-Protagonists-Ethel.html
@@ -40,7 +40,7 @@
 	    <dd><b>Background:</b> Bass was a child sold on the Chinese Market by a rich, sterile US family that adopted him because he was a rarity. 
 	He was seen more as a trophy than their child, so once old enough he stole his father's boat and set sail lost at sea in the Eastern Hemisphere.
     	Bass' parents lived in the rich suburbs of Rhode Island. The neighbors were snobbish, but they were decent people.</dd>
-	    <img src="Bass Childhood.png" alt="Image failed to load" width="192" height="128">
+	    <p> &emsp; &emsp; <img src="Bass Childhood.png" alt="Image failed to load" width="192" height="128"></p>
 	<dd>
 	Bass' father liked to take him in boat trips and teach him how to fish, so he knows how to pilot a boat.	
 	He liked his parents, but they don't really like him or so to speak. 
